--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </div>
             </div>
         </nav>
+        <!--Profile Section-->
         <section id="profile">            
             <div class="section-text">
                 <p class="section-text-1">HI, WELCOME</p>
@@ -50,6 +51,27 @@
             </div>
             <div class="section-pic-container">
                 <img src="./assets/prof-pic.PNG" alt="Prof Pic" class="rounded-image"/>
+            </div>
+        </section>
+        <!--Contact Section-->
+        <section id="contact">
+            <div class="contact-text">
+                <h1 class="contact-title">Contacts</h1>
+            </div>
+            <div class="contact-text-1">
+                <img src="./assets/git-icon.png" alt="Github Profile" class="icon-git"/>
+                <button class="git-button" onclick="window.open('https://github.com/SuperficialFlow')">Github</button>
+                <img src="./assets/email-icon.png" alt="Email Profile" class="icon-email"/>
+                <button class="email-button" onclick="window.open('mailto: 2022jgtrea@live.mcl.edu.ph')">Email</button>            
+            </div>
+        </section>
+        <!--Skills Section-->
+        <section id="skills">
+            <div class="skill-text">
+                <h1 class="skill-title">Skills</h1>
+            </div>
+            <div class="skill-set-1">
+                <h1 class="skill-1">Programming and Experiences</h1>
             </div>
         </section>
         <script src="script.js"></script>
