--- a/index.html
+++ b/index.html
@@ -65,12 +65,30 @@
         </section>
         <!--Skills Section-->
         <section id="skills">
-            <div class="skill-text">
-                <h1 class="skill-title">Skills</h1>
-            </div>
-            <div class="skill-set-1">
-                <h1 class="skill-1">Programming and Experiences</h1>
-            </div>
+            <h1 class="skill-title">Skills</h1>            
+            <div class="skill-set-container">
+                <div class="skill-container">
+                    <h1>Programming And Experiences</h1>
+                    <p> C# <br>
+                        C++ <br>
+                        Python <br>
+                        Javascript <br>
+                        HTML 
+                    </p>
+                </div>
+                <div class="skill-container">
+                    <h1>IT Project Management</h1>
+                    <p> Agile Methodologies <br> 
+                        Project Planning and Execution
+                    </p>
+                </div>
+                <div class="skill-container">
+                    <h1>Soft Skills <br> </h1>
+                    <p> Communication Skills <br> 
+                        Team COllaboration <br>
+                        Time Management and Organization</p>
+                </div>
+            </div>       
         </section>
         <script src="script.js"></script>
     </body>
