--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             <h1 class="skill-title">Skills</h1>            
             <div class="skill-set-container">
                 <div class="skill-container">
-                    <h1>Programming And Experiences</h1>
+                    <h1>1. Programming And <br> 
+                        Experiences</h1>
                     <p> C# <br>
                         C++ <br>
                         Python <br>
@@ -77,13 +78,13 @@
                     </p>
                 </div>
                 <div class="skill-container">
-                    <h1>IT Project Management</h1>
+                    <h1>2. IT Project Management</h1>
                     <p> Agile Methodologies <br> 
                         Project Planning and Execution
                     </p>
                 </div>
                 <div class="skill-container">
-                    <h1>Soft Skills <br> </h1>
+                    <h1>3. Soft Skills</h1>
                     <p> Communication Skills <br> 
                         Team COllaboration <br>
                         Time Management and Organization</p>
