--- a/index.html
+++ b/index.html
@@ -91,6 +91,32 @@
                 </div>
             </div>       
         </section>
+        <!--Projects Section-->
+        <section id="projects">
+            <h1 class="project-title">Projects</h1>
+            <div class="project-set-container">
+                <div class="project-container">
+                    <h1>1. ICY Heights</h1>
+                    <p> C# developed game, <br> 
+                        that is an endless <br>
+                        runner type.
+                    </p>
+                </div>          
+                <div class="project-container">
+                    <h1>2. VPN App Concept - <br>
+                        UI/UX </h1>
+                    <p> Figma made concept <br> 
+                        for an VPN app.</p>
+                </div>  
+                <div class="project-container">
+                    <h1>3. Four Pics One Word</h1>
+                    <p> Python developed game, <br> 
+                        puzzle game where players <br> 
+                        guess a word correlated to <br>
+                        the given four pics.</p>
+                </div>    
+            </div>
+        </section>
         <script src="script.js"></script>
     </body>
 </html>
