--- a/index.html
+++ b/index.html
@@ -42,26 +42,19 @@
                 <p class="section-text-1">HI, WELCOME</p>
                 <h1 class="section-title">I'm Jan Rea</h1>
                 <p class="section-text-2">B.S. Student of Information Technology that is currently <br> 
-                learning at Mapua Malayan Colleges of Laguna.</p>
-                <p class="section-text-3">ABOUT MYSELF, </p>
-                <p class="section-text-4">I developed an interest in BS-IT due to my passion and exposure <br> 
-                to technology and how it integrates into my everyday life. <br> 
-                Other passions I enjoy engaging with include cooking, <br> 
-                gaming, listening to music, and problem-solving.</p>                                 
+                learning at Mapua Malayan Colleges of Laguna.</p>                                                
             </div>
             <div class="section-pic-container">
                 <img src="./assets/prof-pic.PNG" alt="Prof Pic" class="rounded-image"/>
             </div>
         </section>
-        <!--Contact Section-->
-        <section id="contact">
-            <div class="contact-text">
-                <h1 class="contact-title">Contacts</h1>
-                <img src="./assets/git-icon.png" alt="Github Profile" class="icon-git"/>
-                <button class="git-button" onclick="window.open('https://github.com/SuperficialFlow')">Github</button>
-                <img src="./assets/email-icon.png" alt="Email Profile" class="icon-email"/>
-                <button class="email-button" onclick="window.open('mailto: 2022jgtrea@live.mcl.edu.ph')">Email</button>            
-            </div>
+        <!--AboutMe Section-->
+        <section id=AboutMe>
+            <h1 class="section-text-3">ABOUT MYSELF</h1>
+            <p class="section-text-4">I developed an interest in BS-IT due to my passion and exposure <br> 
+            to technology and how it integrates into my everyday life. <br> 
+            Other passions I enjoy engaging with include cooking, <br> 
+            gaming, listening to music, and problem-solving.</p>
         </section>
         <!--Skills Section-->
         <section id="skills">
@@ -117,6 +110,29 @@
                 </div>    
             </div>
         </section>
+        <!--Achievements Section-->
+        <section id="achievement">
+            <h1 class="achievement-title">Achievements</h1>
+            <div class="achievement-set-container">
+                <div class="achievement-container">
+                    <h1>Completion of Codechum</h1>
+                </div>
+                <div class="achievement-container">
+                    <h1>2nd Year Deans Lister <br> 
+                        - 1st Term</h1>
+                </div>
+            </div>
+        </section>
+        <!--Contact Section-->
+        <section id="contact">
+            <div class="contact-text">
+                <h1 class="contact-title">Contacts</h1>
+                <img src="./assets/git-icon.png" alt="Github Profile" class="icon-git"/>
+                <button class="git-button" onclick="window.open('https://github.com/SuperficialFlow')">Github</button>
+                <img src="./assets/email-icon.png" alt="Email Profile" class="icon-email"/>
+                <button class="email-button" onclick="window.open('mailto: 2022jgtrea@live.mcl.edu.ph')">Email</button>            
+            </div>
+        </section>        
         <script src="script.js"></script>
     </body>
 </html>
