--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <p class="section-text-1">HI, WELCOME</p>
                 <h1 class="section-title">I'm Jan Rea</h1>
                 <p class="section-text-2">B.S. Student of Information Technology that is currently <br> 
-                learning at Mapua Malayan Colleges of Laguna.</p>                                                
+                learning at Mapua Malayan Colleges of Laguna.</p>       
+                <button class="contact-button" onclick="scrollToContact()">Contact Us</button>                                         
             </div>
             <div class="section-pic-container">
                 <img src="./assets/prof-pic.PNG" alt="Prof Pic" class="rounded-image"/>
