--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav id="desktop-nav">
-            <div class="logo">AboutME.</div>
+            <div class="logo">About<span style="color: #F6D776;">ME.</span></div>
             <div>
                 <ul class="nav-links">
                     <li><a href="#contact">CONTACT</a></li>
@@ -21,7 +21,7 @@
             </div>
         </nav>
         <nav id="mobile-nav">
-            <div class="logo">AboutME.</div>
+            <div class="logo">About<span style="color: #F6D776;">ME.</span></div>
             <div class="mobile-menu">
                 <div class="menu-icon" onclick="toggleMenu()">
                     <span></span>
@@ -39,19 +39,19 @@
         <!--Profile Section-->
         <section id="profile">            
             <div class="section-text">
-                <p class="section-text-1">HI, WELCOME</p>
+                <p class="section-text-1"><span style="color: #F6D776;">HI, WELCOME</span></p>
                 <h1 class="section-title">I'm Jan Rea</h1>
                 <p class="section-text-2">B.S. Student of Information Technology that is currently <br> 
                 learning at Mapua Malayan Colleges of Laguna.</p>       
                 <button class="contact-button" onclick="scrollToContact()">Contact Us</button>                                         
             </div>
             <div class="section-pic-container">
-                <img src="./assets/prof-pic.PNG" alt="Prof Pic" class="rounded-image"/>
+                <img src="./assets/prof-pic.png" alt="Prof Pic" class="rounded-image"/>
             </div>
         </section>
         <!--AboutMe Section-->
         <section id=AboutMe>
-            <h1 class="section-text-3">ABOUT MYSELF</h1>
+            <h1 class="section-text-3">ABOUT <span style="color: #F6D776;">MYSELF</span></h1>
             <p class="section-text-4">I developed an interest in BS-IT due to my passion and exposure <br> 
             to technology and how it integrates into my everyday life. <br> 
             Other passions I enjoy engaging with include cooking, <br> 
@@ -59,7 +59,7 @@
         </section>
         <!--Skills Section-->
         <section id="skills">
-            <h1 class="skill-title">Skills</h1>            
+            <h1 class="skill-title">My <span style="color: #F6D776;">Skills</span></h1>            
             <div class="skill-set-container">
                 <div class="skill-container">
                     <h1>1. Programming And <br> 
@@ -87,7 +87,7 @@
         </section>
         <!--Projects Section-->
         <section id="projects">
-            <h1 class="project-title">Projects</h1>
+            <h1 class="project-title">My <span style="color: #F6D776;">Projects</span></h1>
             <div class="project-set-container">
                 <div class="project-container">
                     <h1>1. ICY Heights</h1>
@@ -113,7 +113,7 @@
         </section>
         <!--Achievements Section-->
         <section id="achievement">
-            <h1 class="achievement-title">Achievements</h1>
+            <h1 class="achievement-title">My <span style="color: #F6D776;">Achievements</span></h1>
             <div class="achievement-set-container">
                 <div class="achievement-container">
                     <h1>Completion of Codechum</h1>
