--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         <section id="profile">            
             <div class="section-text">
                 <p class="section-text-1"><span style="color: #F6D776;">HI, WELCOME</span></p>
-                <h1 class="section-title">I'm Jan Rea</h1>
+                <h1 class="section-title">I'm <span class="name">Jan Rea</span></h1>
                 <p class="section-text-2">B.S. Student of Information Technology that is currently <br> 
                 learning at Mapua Malayan Colleges of Laguna. 
                 <a href="#campus" onclick="window.open('https://mcl.edu.ph/')">
-                    <img src="./assets/link-icon.png" alt="Link Pic" class="link-image"/>
+                    <img src="./assets/link-icon.png" alt="Link Pic" class="link-image"/>                    
                 </a>
             </p>    
 
                 <button class="contact-button" onclick="scrollToContact()">Contact Us</button>                                         
             </div>
             <div class="section-pic-container">
-                <img src="./assets/prof-pic.png" alt="Prof Pic" class="rounded-image"/>
+                <img src="./assets/prof-pic.png" alt="Prof Pic" class="rounded-image"/>                
             </div>
         </section>
         <!--AboutMe Section-->
