--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="skill-container">
                     <h1>3. Soft Skills</h1>
                     <p> Communication Skills <br> 
-                        Team COllaboration <br>
+                        Team Collaboration <br>
                         Time Management and Organization</p>
                 </div>
             </div>       
