--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
             </div>
         </nav>
         <!--Profile Section-->
-        <section id="profile" class="hidden">            
+        <section id="profile">            
             <div class="section-text">
                 <p class="section-text-1"><span style="color: #F6D776;">HI, WELCOME</span></p>
                 <h1 class="section-title">I'm <span class="name">Jan Rea</span></h1>
-                <p class="section-text-2">B.S. Student of Information Technology that is currently <br> 
-                learning at Mapua Malayan Colleges of Laguna. 
+                <p class="section-text-2">B.S. Student of Information Technology that is currently learning at <br> 
+                Mapua Malayan Colleges of Laguna. Seeking to apply my <br> 
+                analytical abilities and organizational skills.
                 <a href="#campus" onclick="window.open('https://mcl.edu.ph/')">
                     <img src="./assets/link-icon.png" alt="Link Pic" class="link-image"/>                    
                 </a>
@@ -78,6 +79,20 @@
             Other passions I enjoy engaging with include cooking, <br> 
             gaming, listening to music, and problem-solving.</p>
         </section>
+        <section id=Education class="hidden">
+            <div class="edu-container">
+                <h1 class="section-text-5">
+                    <img src="./assets/education.png" class="edu-image"/>
+                    <span style="color: #F6D776;">Education</span>
+                </h1>
+                <p class="section-text-6">Mapua Malayan Colleges of Laguna Philippines.      (2022 - 2024) <br>
+                Mater Ecclesiae School Laguna Philippines.      (2017 - 2022) <br>
+                St. Odilard School, Cavite Philippines.     (2016 - 2017) <br>
+                Mt. Druitt Public School, Sydney Aust.      (2014 - 2016) <br>
+                Hebersham Public School, Sydney Aust.       (2010 - 2013) <br>
+                Philippines School Bahrain.         (2007 - 2010)</p>
+            </div>
+        </section>
         <!--Skills Section-->
         <section id="skills" class="hidden">
             <h1 class="skill-title">
@@ -86,27 +101,32 @@
             </h1>            
             <div class="skill-set-container">
                 <div class="skill-container">
-                    <h1>1. Programming And <br> 
-                        Experiences</h1>
-                    <p> C# <br>
-                        C++ <br>
-                        Python <br>
-                        Javascript <br>
-                        HTML  
+                    <h1>1. Programming And Experiences</h1>
+                    <p class="programming-skills">
+                        <br>C# <span>★★★★★</span><br>
+                        C++ <span>★★★★★</span><br>
+                        Python <span>★★★★</span><br>
+                        Javascript <span>★★★</span><br>
+                        HTML <span>★★★</span>
                     </p>
                 </div>
                 <div class="skill-container">
                     <h1>2. IT Project Management</h1>
-                    <p> Agile Methodologies <br> 
-                        Project Planning and Execution
+                    <p class="programming-skills">
+                        <br>Agile Methodologies <span>★★★★</span><br> 
+                        Project Planning and Execution <span>★★★★</span>
                     </p>
                 </div>
+                
                 <div class="skill-container">
                     <h1>3. Soft Skills</h1>
-                    <p> Communication Skills <br> 
-                        Team Collaboration <br>
-                        Time Management and Organization</p>
+                    <p class="programming-skills">
+                        <br>Communication Skills <span>★★★★</span><br> 
+                        Team Collaboration <span>★★★★★</span><br>
+                        Time Management and Organization <span>★★★★★</span>
+                    </p>
                 </div>
+                
             </div>       
         </section>
         <!--Projects Section-->
@@ -146,11 +166,14 @@
             </h1>
             <div class="achievement-set-container">
                 <div class="achievement-container">
+                    <h1>CREOTEC Work Immersion Lead Coder</h1>
+                </div>
+                <div class="achievement-container">
                     <h1>Completion of Codechum</h1>
                 </div>
                 <div class="achievement-container">
                     <h1>2nd Year Deans Lister</h1>
-                </div>
+                </div>                
             </div>
         </section>
         <!--Contact Section-->
